2004-07-10  Gray Watson  <gray@outside.256.com>

	* Starting release of 5.4.0.

2004-07-09  Gray Watson  <gray@outside.256.com>

	* Removed force-linear token because made invalid with mmap
	addition.

	* Removed the growing up testing and other restrictions for the
	heap because mmap made it invalid.  Drastically reduced the
	various up and down macros and associated testing.

	* Added mmap usage inside of the library.  Should it be the
	default?

2004-07-08  Gray Watson  <gray@outside.256.com>

	* Removed auto-seeding of internal random with variable seed.
	This was creating random addresses for programs making it hard to
	debug.

2004-07-01  Gray Watson  <gray@outside.256.com>

	* Added bigger and better debugging server section to the manual.

	* Added header/footer to online manual.

2004-06-29  Gray Watson  <gray@outside.256.com>

	* Really improved the logging of error information about pointers.
	Better formats, added prev/next for fence post errors, etc..

2004-06-07  Gray Watson  <gray@outside.256.com>

	* Added return.h support for ia64 machine type from Didier Remy.

2004-04-09  Gray Watson  <gray@outside.256.com>

	* NOTE: next release I should increase the maximum source file
	length from 10k to 30k or something.

	* Fixed some typos in the docs and created a new gdb translate
	return-address section.  Thanks Luk.

2004-02-18  Gray Watson  <gray@outside.256.com>

	* Fixed info install with feedback from Matt Fuller.  Thanks.

2004-01-31  Gray Watson  <gray@outside.256.com>

	* Added compat and arg_checking of atoi, atol, and memmove.
	Thanks to Guy (guyresh) for pointing out the omissions.

	* Added arg checking to internal strdup functions.

	* Moved argv.c code to use loc_snprintf.

2004-01-28  Gray Watson  <gray@outside.256.com>

	* Releasing dmalloc version 5.3.0.

	* Fixed a bad bug where calls to _dmalloc_chunk_pnt_check from the
	arg_check.c functions were not locking.  Ugh.  Thanks much to
	Guy (guyresh).
