@@ -1,3 +1,7 @@
+2004-08-13  Gray Watson  <gray@outside.256.com>
+
+	* Added backwards compatibility (ugh) to %d for logfile name.
+
 2004-07-10  Gray Watson  <gray@outside.256.com>
 
 	* Starting release of 5.4.0.
@@ -2207,5 +2211,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray@toaster.antaire.com)
 	* Started ChangeLog.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.321 2004/07/11 03:08:38 gray Exp $
+$Id: ChangeLog,v 1.322 2004/08/13 16:52:14 gray Exp $
 -------------------------------------------------------------------------------
